# Manta

./: .gitignore  .golangci.yaml  Cargo.toml  Dockerfile  Dockerfile.agent  Dockerfile.preheat  Makefile  PROJECT  README.md  go.mod  go.sum
agent/cmd/: main.go
agent/config/: kustomization.yaml
agent/deploy/: clusterrole-binding.yaml  clusterrole.yaml  daemonset.yaml  service-account.yaml  serviceaccount.yaml
agent/handler/: blob_test.go  handler.go  request.go  request_test.go
api/: consts.go
api/v1alpha1/: doc.go  groupversion_info.go  nodetracker_types.go  replication_types.go  torrent_types.go  zz_generated.deepcopy.go
cmd/: main.go
config/crd/: kustomization.yaml
config/default/: kustomization.yaml  manager_auth_proxy_patch.yaml
config/manager/: kustomization.yaml  manager.yaml
config/rbac/: nodetracker_editor_role.yaml  nodetracker_viewer_role.yaml  replication_editor_role.yaml  replication_viewer_role.yaml  role.yaml  torrent_editor_role.yaml  torrent_viewer_role.yaml
config/samples/: _v1alpha1_nodetracker.yaml  _v1alpha1_replication.yaml  _v1alpha1_torrent.yaml  kustomization.yaml
config/webhook/: kustomization.yaml  manifests.yaml  mutating-patch.yaml  service.yaml
docs/: installation.md
hack/: e2e-test.sh  merge-yaml.sh  update-codegen.sh
pkg/: defaults.go
pkg/cert/: cert.go
pkg/controller/: nodetracker_controller.go  pod_controller.go  replication_controller.go  suite_test.go  torrent_controller.go
pkg/dispatcher/: cache.go  dispatcher.go  framework.go
pkg/util/: modelhub.go  (+5 more)
preheat/: go.mod  main.go
src/: lib.rs
(+60 files in other folders)
