[package]
name = "manta"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
chrono = { version = "0.4.39", features = ["serde"] }
fuser = "0.15.1"
futures = "0.3.31"
lazy_static = "1.5.0"
libc = "0.2.167"
log = "0.4.22"
once_cell = "1.20.2"
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }
tokio = "1.42.0"
